@@ -147,6 +147,7 @@ All (GUI):
 - Fixed bug with ignoring blank lines in multiline wxGrid cell labels
 - Added wxTextAttr::Merge() (Marcin Simonides)
 - Added wxTB_NO_TOOLTIPS style (Igor Korot)
+- Added wxGenericDirCtrl::CollapsePath() (Christian Buhtz)
 
 wxMSW:
 
